# telos

./: LICENSE  README.MD  README.md  notes.md  pyproject.toml  test.py
.github/workflows/: tests.yml
benchmarks/stlcgpp/: bench.py  benchmark.ipynb
benchmarks/stlcgpp/results/: grid.json  sweep-jax.json  sweep-torch.json  sweep.json  sweep_lse.json  sweep_softmax.json
src/nameless/: __init__.py  algebras.py  deduction.py  syntax.py
src/nameless/algebras/: __init__.py  boolean.py  goedel.py  hamacher.py  product.py
src/telos/: __init__.py  deduction.py  syntax.py
src/telos/algebras/: __init__.py  aczel_alsina.py  base.py  boltzmann.py  boolean.py  dombi.py  frank.py  goedel.py  hamacher.py  kleene_dienes.py  lifted.py  lse.py  lukasiewicz.py  product.py  properties.py  robustness.py  schweizer_sklar.py  sugeno_weber.py  yager.py
tests/: test_deduction.py  test_gradients.py  test_implementations.py  test_overrides.py  test_properties.py
